# MuseEEG-OSC-Bridge

./: LICENSE  Muse-OSC-Bridge.spec  README.md  gui_app.py  main.py  osc_bridge.py  pyproject.toml  requirements.txt  stream_supervisor.py
.github/workflows/: release-pyinstaller.yml
