[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "muse-tools"
version = "0.1.0"
description = "Standalone Muse LSL to OSC bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ampdlib>=1.1.6",
    "muselsl>=2.3.1",
    "numpy>=2.4.4",
    "pyinstaller>=6.19.0",
    "pylsl>=1.18.1",
    "pyqt6>=6.11.0",
    "python-osc>=1.10.2",
    "scipy>=1.17.1",
]

[project.scripts]
muse-osc-bridge = "main:main"
muse-osc-bridge-gui = "gui_app:main"

[tool.hatch.build.targets.wheel]
include = [
    "/gui_app.py",
    "/main.py",
    "/osc_bridge.py",
    "/stream_supervisor.py",
]
